--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ғᴀʟʟᴇɴ ダ ᴍᴜsɪᴄ",
+    "name": "KESHAVxMUSIC",
     "description": "A VC Player Bot for telegram videochats, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/6f99c49bdb4679acad717.jpg",
+    "logo": "https://telegra.ph/file/6d177df2087bbd3f8c6c4.jpg",
     "keywords": [
     "python3",
     "telegram",
